Added files via upload

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <tr>
             <td>2. Hierarchy</td>
             <td>
-              <select id="selGeonameId">
+              <select id="selGeonameId2">
                 <option value="2657896">Zürich</option>
               </select>
             </td>
@@ -42,7 +42,7 @@
           <tr>
             <td>3. Neighbours</td>
             <td>
-              <select id="selGeonameId">
+              <select id="selGeonameId3">
                 <option value="2658434">Austria</option>
               </select>
               <select id="selCountry">
