--- a/gazetteer/index.html
+++ b/gazetteer/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>Gazetteer</title>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="css/style.css" type="text/css" rel="stylesheet">
     <link href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" rel="stylesheet"
      integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
      crossorigin=""/>
@@ -14,7 +14,7 @@
   <body>
     <header>
       <nav>
-        <select id="options">
+        <!-- <select id="options">
           <option id="AFG">Afghanistan</option>
           <option id="ARG">Argentina</option>
           <option id="ARM">Armenia</option>
@@ -95,11 +95,17 @@
           <option id="UZB">Uzbekistan</option>
           <option id="VEN">Venezuela</option>
           <option id="YEM">Yemen</option>
-        </select>
+        </select> -->
+        <form id="myForm">
+          <select id="selectCountry">
+            <option>Select a country</option>
+          </select>
+        </form>
       </nav>
     </header>
 
     <div id="map"></div>
+
 
     <button id="button1">Submit</button>
     <p id="pp"></p>
@@ -186,6 +192,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <script type="application/javascript" src="script.js"></script>
+    <script type="application/javascript" src="js/script.js"></script>
   </body>
 </html>
